--- a/fsm-user-service/Jenkinsfile
+++ b/fsm-user-service/Jenkinsfile
@@ -17,6 +17,12 @@ pipeline {
         }
 
         stage('构建模块') {
+            agent {
+                docker {
+                    image 'maven:3.8.7-jdk-17'
+                    args '-v $HOME/.m2:/root/.m2'  // 挂载本地Maven缓存，加速构建
+                }
+            }
             steps {
                 sh "mvn clean package -pl ${MODULE_NAME} -am -DskipTests"
             }
