--- a/fsm-user-service/Jenkinsfile
+++ b/fsm-user-service/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         stage('构建模块') {
             agent {
                 docker {
-                    image 'maven:3.8.7-jdk-17'
+                    image 'maven:3.8.3-openjdk-17'
                     args '-v $HOME/.m2:/root/.m2'  // 挂载本地Maven缓存，加速构建
                 }
             }
